--- a/src/CSS/ProductPage.css
+++ b/src/CSS/ProductPage.css
@@ -1,6 +1,7 @@
 #ProductPage{
     height: 100%;
     width: 100%;
+    transition: all 0.3s;
 }
 
 #PP-Hero{
@@ -9,6 +10,8 @@
     background-size: cover;
     background-position: top; 
     background-repeat: no-repeat;
+    transition: all 0.3s;
+
 }
 #PP-Hero>div{
     /* background-color: rgba(0, 0, 0, 0.562); */
@@ -31,6 +34,8 @@
     h1{
         font-size: 40px;
     }
+    transition: all 0.3s;
+
 }
 
 #PP-Course{
@@ -41,6 +46,8 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
+    transition: all 0.3s;
+
 }
 
 #PP-Course>:nth-child(1){
@@ -68,7 +75,11 @@
     border-bottom-right-radius: 30px;
     
     li{
-        margin-left: -20px;
+        margin-left: -35px;
+        list-style: none;
+        gap: 5px;
+        display: flex;
+        width: 100%;
     }
     li>span{
         position: relative;
@@ -110,27 +121,39 @@
         font-weight: 700;
         cursor: pointer;
         border-bottom: 3px solid rgb(221, 221, 221);
-    }
+
+        a{
+            text-decoration: none;
+            color:black
+        }
 
     div:hover{
         border-bottom: 3px solid #5c3cac;
         padding-top: 1px;
     }
+
+
 }
 
 #about-course{
     width: 100%;
     text-align: start;
+    transition: all 0.3s;
+
 }
 
 #course-expect{
     width: 100%;
     text-align: start;
+    transition: all 0.3s;
+
 }
 
 #key-topics{
    text-align: start;
    width: 100%;
+   transition: all 0.3s;
+
 }
 
 li>span{
@@ -155,4 +178,86 @@ li>p>span{
     font-weight: 600;
     color: white;
     font-size: 15px;
+    cursor: pointer;
+}
+
+
+@media screen and (max-width:1100px) {
+    #PP-Hero-Content{
+        padding: 0px 0px 150px 100px;
+        width: 60%;
+
+        h1{
+            font-size: 30px;
+        }
+    }
+
+    #PP-Course{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:900px) {
+    #PP-Course{
+        display: block;
+    }
+    #PP-Course>:nth-child(1){
+        width: 100%;
+        height: 100%;
+        /* background-color: red; */
+    
+        li{
+            margin-left: -20px;
+            list-style-type:  '✓';
+            width: 95%;
+        }
+        h1{
+            margin-top: 50px;
+        }
+    }
+    #PP-Course>:nth-child(2){
+        width: 90%;
+        margin-top: 50px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 0px 6px;
+        border-radius: 25px;
+    }
+    #PP-Hero-Content{
+        padding: 0px 0px 60px 80px;
+        width: 80%;
+
+        h1{
+            font-size: 30px;
+        }
+    }
+}
+
+@media screen and (max-width:800px) {
+    #PP-Course>:nth-child(2){
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:700px) {
+    #PP-Hero-Content{
+        padding: 0px 50px 60px 50px;
+        width: 80%;
+
+        h1{
+            font-size: 30px;
+        }
+    }
+    #PP-Course>:nth-child(2){
+        width: 80%;
+        margin:100px auto 0px auto;
+    }
+}
+
+@media screen and (max-width:350px) {
+    #Query-bar{
+        display: none;
+    }
+    #register-button{
+        margin: 15px auto 0px auto;
+    }
+    
 }
