--- a/src/CSS/ProductPage.css
+++ b/src/CSS/ProductPage.css
@@ -112,7 +112,7 @@
     align-items: center;
     margin-bottom: 50px;
 
-    div{
+    a{
         height: 100%;
         width: 33.3%;
         display: flex;
@@ -121,13 +121,10 @@
         font-weight: 700;
         cursor: pointer;
         border-bottom: 3px solid rgb(221, 221, 221);
-
-        a{
-            text-decoration: none;
-            color:black
-        }
+        text-decoration: none;
+        color:black
     }
-    div:hover{
+    a:hover{
         border-bottom: 3px solid #5c3cac;
         padding-top: 1px;
     }
